--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ ipykernel==6.29.5
 ipython==8.32.0
 jedi==0.19.2
 Jinja2==3.1.4
+joblib==1.4.2
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 kiwisolver==1.4.8
@@ -38,9 +39,13 @@ python-dateutil==2.9.0.post0
 pytz==2025.1
 pywin32==308
 pyzmq==26.2.1
+scikit-learn==1.6.1
+scipy==1.15.1
+seaborn==0.13.2
 six==1.17.0
 stack-data==0.6.3
 sympy==1.13.1
+threadpoolctl==3.5.0
 torch==2.6.0+cu124
 torchaudio==2.6.0+cu124
 torchvision==0.21.0+cu124
